src/passes/02-parsing/jsligo/Tests/contracts/top_level_patterns/negative/jsligo/nested_record.jsligo
// TODO: write this in jsligo

// type t = { c : nat ; d : int ; e : string }
// type r = { a : t   ; b : t   ; c : t      }

// let r = { a = { c = abs(1) ; d = 1 ; e = "H" }
//         ; b = { c = abs(2) ; d = 2 ; e = "E" }
//         ; c = { c = abs(3) ; d = 3 ; e = "L" }
//         }
// let { a = { c = c1 ; d = d1 ; e = e1 }
//     ; b = { c = c2 ; d = d2 ; e = e2 }
//     ; c = { c = c3 ; d = c1 ; e = e3 }
//     } = r
